One more Project Added

--- a/views/projects.html
+++ b/views/projects.html
@@ -39,6 +39,20 @@
                         </div>
                     </a>
                 </li>
+
+                <li>
+                    <a href="https://github.com/aryansingh10/CurrencyConverterByReactJS" target="_blank">
+                        <div class="project-info">
+                            <p class="project-title">Currency Converter</p>
+                            <p class="project-description">Currency Converter is a web application designed to facilitate easy currency conversion between different currencies. Users can input an amount in one currency and quickly see its equivalent value in another currency, based on the current exchange rates.
+                            </p>
+                        </div>
+                        <img src="/Currrency.png" alt="Currency Converter Score Keeper Screenshot">
+                        <div class="overlay">
+                            <p>Click to view source code</p>
+                        </div>
+                    </a>
+                </li>
                 <li>
                     <a href="#">
                         <div class="project-info">
