--- a/views/projects.html
+++ b/views/projects.html
@@ -54,14 +54,14 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/aryansingh10/YelpCamp" target="_blank">
                         <div class="project-info">
                             <p class="project-title">YelpCamp</p>
                             <p class="project-description">YelpCamp is a full-stack web application project that allows users to discover, review, and share campgrounds.</p>
                         </div>
                         <img src="/6186b17dece9f703e6ea7962_YelpCamp.jpg" alt="YelpCamp Screenshot">
                         <div class="overlay">
-                            <p>Will be Out Soon</p>
+                            <p>Click to view source code</p>
                         </div>
                     </a>
                 </li>
