--- a/views/projects.html
+++ b/views/projects.html
@@ -1,5 +1,3 @@
-<!-- views/projects.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,26 +26,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/aryansingh10/ScoreKeeper-TT-" target="_blank">
-                        <div class="project-info">
-                            <p class="project-title">Score Keeper - Table Tennis</p>
-                            <p class="project-description">Score Keeper - Table Tennis is a web app for hassle-free score tracking in table tennis matches.</p>
-                        </div>
-                        <img src="/Screenshot (98).png" alt="Table Tennis Score Keeper Screenshot">
-                        <div class="overlay">
-                            <p>Click to view source code</p>
-                        </div>
-                    </a>
-                </li>
-
-                <li>
                     <a href="https://github.com/aryansingh10/CurrencyConverterByReactJS" target="_blank">
                         <div class="project-info">
                             <p class="project-title">Currency Converter</p>
-                            <p class="project-description">Currency Converter is a web application designed to facilitate easy currency conversion between different currencies. Users can input an amount in one currency and quickly see its equivalent value in another currency, based on the current exchange rates.
-                            </p>
+                            <p class="project-description">Currency Converter is a web application designed to facilitate easy currency conversion between different currencies. Users can input an amount in one currency and quickly see its equivalent value in another currency, based on the current exchange rates.</p>
                         </div>
-                        <img src="/Currrency.png" alt="Currency Converter Score Keeper Screenshot">
+                        <img src="/Currrency.png" alt="Currency Converter Screenshot">
                         <div class="overlay">
                             <p>Click to view source code</p>
                         </div>
@@ -60,6 +44,42 @@
                             <p class="project-description">YelpCamp is a full-stack web application project that allows users to discover, review, and share campgrounds.</p>
                         </div>
                         <img src="/6186b17dece9f703e6ea7962_YelpCamp.jpg" alt="YelpCamp Screenshot">
+                        <div class="overlay">
+                            <p>Click to view source code</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/aryansingh10/AcademicNexus" target="_blank">
+                        <div class="project-info">
+                            <p class="project-title">Academic Nexus</p>
+                            <p class="project-description">Academic Nexus is a web platform designed to connect students and educators for sharing academic resources, collaborating on projects, and accessing study materials.</p>
+                        </div>
+                        <img src="/acad.jpg" alt="Academic Nexus Screenshot">
+                        <div class="overlay">
+                            <p>Click to view source code</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/aryansingh10/Email-Classifier" target="_blank">
+                        <div class="project-info">
+                            <p class="project-title">Email Classifier</p>
+                            <p class="project-description">A web application for classifying emails based on their content, using the MERN stack.</p>
+                        </div>
+                        <img src="/Image.jpg" alt="Email Classifier Screenshot">
+                        <div class="overlay">
+                            <p>Click to view source code</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/aryansingh10/TaskMaster-Crework" target="_blank">
+                        <div class="project-info">
+                            <p class="project-title">TaskMaster</p>
+                            <p class="project-description">TaskMaster is a full-stack task management application designed for team collaboration and task tracking.</p>
+                        </div>
+                        <img src="/task.jpg" alt="TaskMaster Screenshot">
                         <div class="overlay">
                             <p>Click to view source code</p>
                         </div>
@@ -89,11 +109,11 @@
                 <a href="https://www.linkedin.com/in/aryansinghthakur/" target="_blank"><img src="/linkedin.png" alt="LinkedIn"></a>
                 <a href="https://www.instagram.com/__aryansingh__07/" target="_blank"><img src="/download.jpg" alt="Instagram"></a>
                 <a href="https://twitter.com/_aryansingh_07" target="_blank"><img src="/twiiter-2.png" alt="Twitter"></a>
-                <a href="https://drive.google.com/file/d/1rbEnoNxQWuf5BlieybGC44e0hj2LQhxL/view?usp=sharing" download="Aryan_Singh_Resume.pdf" class="resume-link">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1kDpKn6d8O33d8xRZRP3crCynRLWbI3Pt/view?usp=sharing" download="Aryan_Singh_Resume.pdf" class="resume-link">Download Resume</a>
             </div>
         </div>
     </div>
-    <!-- Written Content for Users -->   
+    <!-- Written Content for Users -->
 
 </body>
 
