--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
             <div class="col">
                 <h1>About Me</h1>
                 <p class="about-p">
-                    Hello! I'm Aryan Singh Thakur, a passionate third-year undergraduate student majoring in Computer Science and Engineering at the Acropolis Institute of Technology and Research in Indore, India.
+                    Hello! I'm Aryan Singh Thakur, a passionate final-year undergraduate student majoring in Computer Science and Engineering at the Acropolis Institute of Technology and Research in Indore, India.
                     <br><br>
                     I was born and raised in the vibrant city of Indore, Madhya Pradesh. From a young age, I've been captivated by the world of engineering, driven by a natural curiosity and a deep love for problem-solving. 
                     <br><br>
